--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.hp'
 version '0.0.1'
 
 buildscript {
-    ext.kotlin_version = '1.3.0'
+    ext.kotlin_version = '1.3.10'
 
     repositories {
         mavenCentral()
@@ -46,6 +46,9 @@ subprojects {
         compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
         compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
         compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2"
+        compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j2', version: '1.1.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
     }
     compileKotlin {
         kotlinOptions.jvmTarget = "1.8"
