--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
-group 'com.hp'
-version '0.0.2'
+ext {
+    kotlin_version = '1.3.21'
+    kalexa_version = '0.1.0'
+    jackson_version = '2.9.8'
+    spek_version = '1.1.5'
+    mockk_version = '1.9.1'
+}
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
-
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
     }
 }
 
 allprojects {
-    group = 'com.hp.kalexa'
-    version = '0.0.2'
-
     apply plugin: 'kotlin'
     apply plugin: 'maven'
 
@@ -24,41 +24,13 @@ allprojects {
         mavenCentral()
         mavenLocal()
     }
-}
-
-subprojects {
-    apply plugin: 'org.junit.platform.gradle.plugin'
-
-    junitPlatform {
-        filters {
-            engines {
-                include 'spek'
-            }
-        }
-    }
-
-    dependencies {
-        testCompile 'org.jetbrains.spek:spek-api:1.1.5'
-        testCompile 'org.jetbrains.spek:spek-junit-platform-engine:1.1.5'
-        testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-        testCompile "io.mockk:mockk:1.9.1"
-
-        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-        compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-        compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
-
-        compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j2', version: '1.1.0'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
-    }
     compileKotlin {
         kotlinOptions.jvmTarget = "1.8"
     }
     compileTestKotlin {
         kotlinOptions.jvmTarget = "1.8"
     }
-}
 
-dependencies {
-    compile(project(':kalexa-core'))
+    version = rootProject.ext.kalexa_version
+    group = 'com.hp.kalexa'
 }
