--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ buildscript {
 subprojects {
     apply plugin: 'kotlin'
     apply plugin: 'maven-publish'
+    apply plugin: 'maven'
     apply plugin: 'signing'
     apply plugin: 'io.gitlab.arturbosch.detekt'
 
