--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ subprojects {
     apply plugin: 'kotlin'
     apply plugin: 'maven-publish'
     apply plugin: 'signing'
+    apply plugin: 'maven'
+
     apply plugin: 'io.gitlab.arturbosch.detekt'
 
     repositories {
