--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@
 
 ext {
     kotlin_version = '1.3.21'
-    kalexa_version = '0.1.1'
+    kalexa_version = '0.2.0'
     jackson_version = '2.9.8'
     spek_version = '1.1.5'
     mockk_version = '1.9.1'
@@ -30,6 +30,8 @@ subprojects {
     apply plugin: 'kotlin'
     apply plugin: 'maven-publish'
     apply plugin: 'signing'
+    apply plugin: 'maven'
+
     apply plugin: 'io.gitlab.arturbosch.detekt'
 
     repositories {
