--- a/kalexa-sdk/build.gradle
+++ b/kalexa-sdk/build.gradle
@@ -4,5 +4,5 @@
  */
 
 dependencies {
-    compile project(':kalexa-core'), project(':kalexa-model')
+    compile project(':kalexa-core'), project(':kalexa-model'), project(':kalexa-persistent-attributes')
 }
